设置主题，亮色主题

--- a/src/styles/global/Logo.module.css
+++ b/src/styles/global/Logo.module.css
@@ -27,6 +27,6 @@
 .logoTitle {
   margin-left: 10px;
   font-size: 20px;
-  color: #b0b0b0;
+  color: var(--text-secondary);
   white-space: nowrap;
 }
