--- a/src/styles/global/SideBar.module.css
+++ b/src/styles/global/SideBar.module.css
@@ -162,7 +162,8 @@
   gap: 4px;
   position: absolute;
   left: 16px;
-  animation: fadeIn 0.3s ease forwards;
+  will-change: opacity, transform;
+  animation: fadeIn 0.2s ease forwards;
 }
 
 .logoImage {
@@ -179,7 +180,7 @@
   white-space: nowrap;
   opacity: 0;
   transition: opacity 0.3s ease;
-  margin-left: 8px;
+  margin-left: 10px;
 }
 
 .sidebar.expanded .logoText,
